# train_pybird_emulators

./: .gitignore  .gitlab-ci.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  pk_integers.txt  ploopl_normal_mode.npy  pyproject.toml
.ipynb_checkpoints/: HISTORY-checkpoint.rst
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/.ipynb_checkpoints/: tutorial-checkpoint.rst
saved_models/: growth_emulator_temp.pkl  growth_emulator_temp_model.h5
src/: pipline.md
src/.ipynb_checkpoints/: pipline-checkpoint.md
src/train_pybird_emulators/: __init__.py  train_pybird_emulators.py
src/train_pybird_emulators/configs/: config_bpk_full.yaml  config_green_functions.yaml  config_growth.yaml  config_growth_and_greens.yaml  config_pybird_80_knots_10sigma.yaml  config_pybird_80_knots_5sigma.yaml
src/train_pybird_emulators/emu_utils/: emu_utils.py  integrated_model.py  integrated_model_jax.py  interpolated_univariate_spline_jax.py  k_arrays.py
src/train_pybird_emulators/lhc_bank_z0p5to2p5/: lhc_cosmo_dict.pkl
src/train_pybird_emulators/notebooks/: Untitled.ipynb  check_td.ipynb  concatenate_pk_bank_arrays.ipynb  config_80_kbins_5sigma.yaml  covariance_80_knots.npy  fine_tune_trained_model.ipynb  get_normalizing_flow.ipynb  get_priors_for_emu.ipynb  get_training_intuition.ipynb  get_training_intuition_search.ipynb  get_training_intuition_train_auto_encoder.ipynb  knots_decomposition_jax.py  knots_decomposition_notebook.ipynb  load_prerained_growth_jax.ipynb  mu_80_knots.npy  overplot_nf_training_data.ipynb  (+8 more)
tests/: test_train_pybird_emulators.py
(+57 files in other folders)
